# promptly

./: .gitignore  README.md  SECURITY.md  games.csv  puzzles.csv  puzzles.txt  pyproject.toml
bias/: Demo.ipynb  README.md  She-he.ipynb
coding/: README.md  python-basic-classification.md  python-fix-geophysics-function.py  python-geophysics-task.md  python-output-prediction.py  python_make_wavelet_class.md
encodings/: encodings.csv
notebooks/: AI_image_analysis_for_geoscience.ipynb  Pitfalls_in_gen_AI_and_how_to_avoid_them.ipynb  Prompt_fu_for_geoscientists.ipynb  README.md  prompt-fu-EAGE.ipynb  prompt_fu_EAGE_seminar.ipynb
pitfalls/: LLM_Pitfalls_Claude-4.ipynb  LLM_Pitfalls_Claude.ipynb  LLM_Pitfalls_GPT-3.5.ipynb  LLM_Pitfalls_GPT-4.1.ipynb  LLM_Pitfalls_GPT-4.ipynb  LLM_Pitfalls_GPT-4o-mini.ipynb  LLM_Pitfalls_GPT-4o.ipynb  LLM_Pitfalls_GPT-5-medium-reasoning.ipynb  LLM_Pitfalls_GPT-5-minimal-reasoning.ipynb  LLM_Pitfalls_GPT-o4-mini.ipynb  LLM_Pitfalls_GPT35.ipynb  LLM_Pitfalls_GPT4.ipynb  LLM_Pitfalls_Gemini.ipynb  LLM_Pitfalls_Mistral-Large.ipynb  LLM_Pitfalls_Mistral-Medium.ipynb  LLM_Pitfalls_Mistral-Small.ipynb  LLM_Pitfalls_Perplexity.ipynb  LLM_Pitfalls_o4-mini.ipynb  README.md
puzzles/: puzzles.csv  puzzles.txt
spatial/: convo.py
spatial/mrt/: mrt.py
spatiotemporal/: Geoscience_testing_2025.ipynb
sussman/: README.md  problems.csv
values/: Comparison-with-IVS.ipynb  Comparison_with_WVS-EVS.ipynb  Compute-weights-from-IVS.ipynb  Evaluation-of-AI-chat-models.ipynb  Evaluation_of_AI_chat_models.ipynb  README.md  magistral.txt
(+7 files in other folders)
