[project]
name = "promptly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]
