[project]
name = "promptly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mistralai>=1.9.2",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "python-dotenv>=1.1.0",
]
